[metadata]
name = Wheel_demo
version = 0.0.1
author = Vignesh
author_email = kannanvignesh4@gmail.com
description = just practicing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/V-i-g-n-e-s-h/wheel-demo
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True